[gd_scene load_steps=7 format=3 uid="uid://ll11ns2il6mj"]

[ext_resource type="Script" path="res://scripts/classes/player.gd" id="1_iu2tr"]
[ext_resource type="PackedScene" uid="uid://nnfgxwyk5tia" path="res://scenes/util/HealthComponent.tscn" id="2_qbuwg"]
[ext_resource type="Shape3D" uid="uid://dc6uxouulibdg" path="res://assets/resources/playerShape.tres" id="2_xq217"]
[ext_resource type="PackedScene" uid="uid://cllxikl7s8po6" path="res://scenes/util/HitboxComponent.tscn" id="3_wms67"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fm4c2"]
resource_local_to_scene = true
size = Vector3(0.561768, 2, 0.509888)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2eeav"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_iu2tr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = ExtResource("2_xq217")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85248, -0.248369)

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashMomentum" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HealthComponent" parent="." instance=ExtResource("2_qbuwg")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("3_wms67")]
healthComponent = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_fm4c2")

[node name="Player Synchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2eeav")
